Fix minor layout bug

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -67,12 +67,12 @@ header .container {
 
 		gap: calc(1rem + 0.5vmin);
 
-		* {
+		> * {
 			margin: 0;
 			align-self: end;
 			justify-self: center;
 		}
-		*:not(h1) {
+		> *:not(h1) {
 			z-index: 5;
 		}
 		h1,
@@ -174,6 +174,9 @@ header .link-github {
 	span {
 		display: contents;
 		animation-name: beat;
+
+		z-index: -1;
+		position: relative;
 	}
 	svg {
 		filter: drop-shadow(2px 0 0 var(--icon-color)) drop-shadow(-2px 0 0 var(--icon-color))
